--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "start": "npm run build && nodemon dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "serve": "npm run build && node dist/index.js",
-    "test": "npm run build && mocha --require @babel/register"
+    "test": "npm run build && mocha --require @babel/register",
+    "babel-node": "babel-node src/index.js",
+    "dev": "nodemon --exec npm run babel-node"
   },
   "keywords": [],
   "author": "",
@@ -16,17 +18,10 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.4.0",
-    "@babel/node": "7.4.5",
     "nodemon": "^1.18.3"
   },
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
     "@babel/node": "7.4.5",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/register": "^7.4.0",
-    "babel-cli": "^6.26.0",
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.16.3",
