--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@babel/node": "7.4.5",
     "consign": "^0.1.6",
     "cors": "^2.8.5",
+    "dottie": "^2.0.1",
     "express": "^4.16.3",
+    "geo-distance": "^0.2.0",
     "pg": "^7.11.0",
     "sequelize": "^6.0.0"
   },
